{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 153,
  "lineage": "898fbfee-6a5b-0dbe-7a25-3c9643b42393",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:loadbalancer/app/test-lb-tf/a1d322c000bc39cb",
            "arn_suffix": "app/test-lb-tf/a1d322c000bc39cb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1799782363.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:loadbalancer/app/test-lb-tf/a1d322c000bc39cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05bb5742b68e715a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0160a3c6ff41cfcdf"
              },
              {
                "subnet_id": "subnet-05d3671048e09ee13"
              }
            ],
            "subnets": [
              "subnet-0160a3c6ff41cfcdf",
              "subnet-05d3671048e09ee13"
            ],
            "vpc_id": "vpc-0a4e3b1c1efce681d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:647301530191:subnet/subnet-05d3671048e09ee13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-05d3671048e09ee13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647301530191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a4e3b1c1efce681d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:647301530191:subnet/subnet-0160a3c6ff41cfcdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0160a3c6ff41cfcdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647301530191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a4e3b1c1efce681d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:647301530191:vpc/vpc-0a4e3b1c1efce681d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09b1d665d4f5cdc25",
            "default_route_table_id": "rtb-06d3e2cfbe8c92dc0",
            "default_security_group_id": "sg-028d09ffeb0da5b01",
            "dhcp_options_id": "dopt-0a1dcf96766f86869",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0a4e3b1c1efce681d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d3e2cfbe8c92dc0",
            "owner_id": "647301530191"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:listener/app/test-lb-tf/a1d322c000bc39cb/eafb857523228d3e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:targetgroup/target-group/982309c675a4c121",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:listener/app/test-lb-tf/a1d322c000bc39cb/eafb857523228d3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:loadbalancer/app/test-lb-tf/a1d322c000bc39cb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:targetgroup/target-group/982309c675a4c121",
            "arn_suffix": "targetgroup/target-group/982309c675a4c121",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:647301530191:targetgroup/target-group/982309c675a4c121",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a4e3b1c1efce681d"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:647301530191:security-group/sg-05bb5742b68e715a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bb5742b68e715a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230517142503322300000002",
            "name_prefix": "terraform-",
            "owner_id": "647301530191",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4e3b1c1efce681d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:647301530191:security-group/sg-007f8926e155bbe64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f8926e155bbe64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05bb5742b68e715a4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230517151826427600000001",
            "name_prefix": "terraform-",
            "owner_id": "647301530191",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4e3b1c1efce681d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}